--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,13 +1,15 @@
+@import 'mixins';
+
 body{
 	background: #010001;
 	margin: 0;
 	padding-top: 53px;
+	color: #FFFFFF;
+	font-family: 'Roboto', sans-serif;
 }
 
 .header{
-	max-width: 1230px;
-	margin: auto;
-	width: 90%;
+	@include size;
 	display: flex;
 	justify-content: space-between;
 }
@@ -25,8 +27,103 @@ body{
 		text-decoration: none;
 		margin-left: 10px;
 		margin-right: 10px;
-		font-family: 'Roboto', sans-serif;
 		font-size: 12px;
 		line-height: 14px;
 	}
+}
+
+.main{
+	text-align: center;
+	padding-top: 120px;
+	padding-bottom: 32px;
+	margin-bottom: 64px;
+}
+
+.title{
+	font-family: Roboto;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 64px;
+	line-height: 75px;
+	margin-bottom: 26px;
+	margin-top: 0;
+}
+
+.description{
+	font-family: Roboto;
+	font-style: normal;
+	font-weight: 300;
+	font-size: 16px;
+	line-height: 22px;
+	text-transform: lowercase;
+	width: 268px;
+	height: 44px;
+	margin: auto;
+	&::after{
+		content:"";
+		display: block;
+		width: 1px;
+		height: 60px;
+		background-color: #FFFFFF;
+		margin: auto;
+		margin-top: 26px;
+	}
+}
+
+.video{
+	height: 750px;
+	@include size;
+	z-index: -1;
+}
+
+.secondary-nav{
+	.item{
+		&-link{
+			color: #808080;
+		}
+	}
+}
+
+.features{
+	@include size;
+	padding: 100px 0;
+	position: relative;
+	&-title{
+		font-family: Roboto;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 24px;
+		line-height: 34px;
+		text-transform: uppercase;
+		margin-bottom: 45px;
+	}
+	&-text{
+		max-width: 490px;
+		font-family: Roboto;
+		font-style: normal;
+		font-weight: 300;
+		font-size: 16px;
+		line-height: 29px;
+	}
+}
+
+.table{
+	margin-bottom: 200px;
+	&-column{
+		width: 300px;
+		padding-top: 6px;
+		padding-bottom: 6px;
+		font-family: Roboto;
+		font-weight: 300;
+		font-size: 18px;
+		line-height: 32px;
+	}
+}
+
+.rocket{
+	position: absolute;
+	top: 350px;
+	right: 0;
+	z-index: 99;
+	height: 1200px;
 }
