--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -122,8 +122,58 @@ body{
 
 .rocket{
 	position: absolute;
-	top: 350px;
+	top: 100px;
 	right: 0;
 	z-index: 99;
-	height: 1200px;
+	max-width: 300px;
+}
+
+.footer{
+	padding: 130px 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	&-link{
+		color: #808080;
+		text-decoration: none;
+	}
+	&-nav{
+		margin-top: 40px;
+		.item{
+			&-link{
+				font-family: Roboto;
+				font-style: normal;
+				font-weight: normal;
+				font-size: 18px;
+				line-height: 21px;
+			}
+		}
+	}
+	&-text{
+		margin-top: 34px;
+		font-family: Roboto;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 18px;
+		line-height: 21px;
+		color: #808080;
+		margin-bottom: 30px;
+
+	}
+	.button{
+		min-width: 260px;
+		padding: 20px;
+		font-family: Roboto;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 18px;
+		line-height: 21px;
+		align-items: center;
+		text-align: center;
+		color: #FFFFFF;
+		text-decoration: none;
+		border: 2px solid #FFFFFF;
+		box-sizing: border-box;
+		border-radius: 6px;
+	}
 }
